clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/borrow_field_of_another_borrow/borrow_field_of_another_borrow.cbs
// RUN: %clang_cc1 -verify %s

void use_mut(int *borrow p) {}
void use_immut(const int *borrow p) {}

struct V {
	int a;
    int *b;
};

struct K {
	struct V v;
};

void test1() {
    int local = 5;
    struct V v = { .a = 5, .b = &local };
    struct V * borrow p = &mut v;
    int *borrow q1 = &mut p->a;
    int *borrow q2 = &mut *p->b;
    const int *borrow q3 = &const p->a;   // expected-note {{previous borrow is here}} expected-note {{previous borrow is here}}
    const int *borrow q4 = &const *p->b;   // expected-note {{previous borrow is here}} expected-note {{previous borrow is here}}
    use_mut(q1);    // expected-error {{There should be at most one mutable borrow targeting to 'v.a' at the same time}}
    use_mut(q2);    // expected-error {{There should be at most one mutable borrow targeting to 'v' at the same time}}
    use_immut(q3);
    use_immut(q4);

    struct K k = { .v = v };
    p = &mut k.v;
    q1 = &mut p->a;
    q2 = &mut *p->b;
    q3 = &const p->a;
    q4 = &const *p->b;
    use_mut(q1);    // expected-error {{There should be at most one mutable borrow targeting to 'k.v.a' at the same time}}
    use_mut(q2);    // expected-error {{There should be at most one mutable borrow targeting to 'k' at the same time}}
    use_immut(q3);
    use_immut(q4);
}

void test2(struct V * borrow p) {
    int *borrow q1 = &mut p->a;
    int *borrow q2 = &mut *p->b;
    const int *borrow q3 = &const p->a;   // expected-note {{previous borrow is here}}
    const int *borrow q4 = &const *p->b;   // expected-note {{previous borrow is here}}
    use_mut(q1);    // expected-error {{There should be at most one mutable borrow targeting to 'p.a' at the same time}}
    use_mut(q2);    // expected-error {{There should be at most one mutable borrow targeting to 'p.b' at the same time}}
    use_immut(q3);
    use_immut(q4);
}

void struct V::foo(This *borrow this) {
    int *borrow q1 = &mut this->a;
    int *borrow q2 = &mut *this->b;
    const int *borrow q3 = &const this->a;   // expected-note {{previous borrow is here}}
    const int *borrow q4 = &const *this->b;   // expected-note {{previous borrow is here}}
    use_mut(q1);    // expected-error {{There should be at most one mutable borrow targeting to 'this.a' at the same time}}
    use_mut(q2);    // expected-error {{There should be at most one mutable borrow targeting to 'this.b' at the same time}}
    use_immut(q3);
    use_immut(q4);
}